# terraform-aws-cloudcompliance

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  index.html  pyproject.toml  start.sh
.github/workflows/: compliance.yml  docker-publish.yml  publish-package.yml
cloudcompliance/: __init__.py  assistant.py  dashboard.py  history.py  notifications.py  remediation.py  report.py  scheduler.py
cloudcompliance.egg-info/: PKG-INFO  SOURCES.txt
cloudcompliance/drift/: __init__.py  detector.py
compliance/: compliance_report.md  drift_report.json  history.db  history_export.json  report.py
terraform/: local.tfvars  main.tf  prod.tfvars
terraform/modules/access_analyzer/: main.tf  outputs.tf
terraform/modules/availability/: main.tf  outputs.tf
terraform/modules/encryption/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf
terraform/modules/incident_response/: main.tf  outputs.tf
terraform/modules/logging/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  variables.tf
