[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cloudcompliance"
version = "1.0.0"
description = "SOC2 compliance evidence generator for Terraform AWS infrastructure"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Kadhiravan E.G.", email = "your@email.com"}
]
keywords = ["soc2", "compliance", "terraform", "aws", "security", "iac"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
  "rich>=12.0.0",
]

[project.scripts]
cloudcompliance = "cloudcompliance.report:main"

[project.urls]
Homepage = "https://github.com/KADHIRAVANEG/terraform-aws-cloudcompliance"
Repository = "https://github.com/KADHIRAVANEG/terraform-aws-cloudcompliance"
