[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudcompliance"
version = "1.2.0"
description = "SOC2 compliance evidence generator for Terraform AWS infrastructure"
readme = "README.md"
license = "MIT"
authors = [
  {name = "Kadhiravan E.G.", email = "kadhiravaneg@gmail.com"}
]
keywords = ["soc2", "compliance", "terraform", "aws", "security", "iac"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
  "rich>=12.0.0",
]

[project.scripts]
cloudcompliance = "cloudcompliance.report:main"

[project.urls]
Homepage = "https://github.com/KADHIRAVANEG/terraform-aws-cloudcompliance"
Repository = "https://github.com/KADHIRAVANEG/terraform-aws-cloudcompliance"

[tool.setuptools.packages.find]
include = ["cloudcompliance*"]
