[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudcompliance"
version = "1.4.0"
description = "SOC2 compliance evidence generator for Terraform AWS infrastructure"
readme = "README.md"
license = "MIT"
authors = [
  {name = "Kadhiravan E.G.", email = "kadhiravaneg@gmail.com"}
]
keywords = ["soc2", "compliance", "terraform", "aws", "security", "iac"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"

dependencies = [
  "rich>=12.0.0",
  "boto3>=1.26.0",
  "requests>=2.28.0",
  "python-dotenv>=0.21.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
]

[project.scripts]
cloudcompliance = "cloudcompliance.report:main"

[project.urls]
Homepage = "https://github.com/KADHIRAVANEG/cloudcompliance"
Repository = "https://github.com/KADHIRAVANEG/cloudcompliance"

[tool.setuptools.packages.find]
include = ["cloudcompliance*"]
